# joke-test20a1fe3c-c182-4775-952b-21344fa08cf3

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: admin_add_joke_service.py  admin_delete_joke_service.py  admin_update_joke_service.py  fetch_random_joke_service.py  fetch_user_profile_service.py  server.py  update_user_profile_service.py  user_login_service.py  user_registration_service.py
